--- a/index.html
+++ b/index.html
@@ -1,38 +1,36 @@
-<!DOCTYPE html >
-<html>
+<!DOCTYPE html>
+<html lang="en-us">
+
     <head>
         <meta charset="utf-8">
-        <title>BTS 189 Labwork 2 - Keith</title>
-        <style>
-            body {
-                font-family: sans-serif;
-                text-align: left;
-                background-color: aliceblue;
-            }
-            li { 
-                list-style-type: none; 
-                padding: 10px; 
-            }
-        </style>
-     </head>
-     <body>
-          <header>
-              <h1>Save the Clean Air Act!</h1>
+        <title>BATECH 189 Labwork 2 - Keith Rowley</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+
+    <body>
+          <!-- Your webpage content goes here -->
+         <header>
+            <h1>Help Save the Sumatran Tiger</h1>
          </header>
-         <nav>
-             <ul>
+
+        <nav>
+            <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="resources.html">Resources</a></li>
-             </ul>
-         </nav>
-         <main>
-             <img src="clean-air.jpg" alt="Photo of Wind Turbine Under Blue Sky" height="200px">
-             <h2>The Supreme Court</h2>
-             <p>The Supreme Court has struck down Federal agencies' ability to regulate private business. This lack of oversight will be disastrous for all the children it's forcing to be born into eternal pollution and squalor.</p>
-         </main>
-         <footer>
-             <p>&copy; 2022 Keith Rowley for BATECH 189</p>
-         </footer>
-     </body>
+            </ul>
+        </nav>
+
+        <main>
+            <h2>Thanks for your interest in helping us save the Sumatran Tiger</h2>
+            <img src="Sumatran_Tiger.jpg" width="400px" alt="Tiger staring you down">
+            <p><cite>Sumatran Tiger by <a href="https://commons.wikimedia.org/wiki/File:Indrah_the_Sumatran_Tiger.jpg" target="_blank">Wikimedia</a>.</cite></p>
+            <p>The Sumatran Tiger is from Sumatra. Don't let it eat you. </p>
+        </main>
+
+        <footer>
+            <p>&copy; 2024 by Keith Rowley for BATECH 189</p>
+        </footer>
+    </body>
+
 </html>
