--- a/resources.html
+++ b/resources.html
@@ -1,43 +1,36 @@
-<!DOCTYPE html >
-<html>
+<!DOCTYPE html>
+<html lang="en-us">
+
     <head>
         <meta charset="utf-8">
-        <title>BTS 189 Labwork 2 - Resources</title>
-        <style>
-            body {
-                font-family: sans-serif;
-                text-align: left;
-                background-color: aliceblue;
-            }
-            nav li { 
-                list-style-type: none; 
-                padding: 10px; 
-            }
-        </style>
-     </head>
-     <body>
-          <header>
-              <h1>Save the Clean Air Act!</h1>
+        <title>BATECH 189 Labwork 2 - Keith Rowley</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+
+    <body>
+          <!-- Your webpage content goes here -->
+         <header>
+            <h1>Resources</h1>
          </header>
-         <nav>
-             <ul>
+
+        <nav>
+            <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="resources.html">Resources</a></li>
-             </ul>
-         </nav>
-         <main>
-             <img src="cleanairglass.jpg" alt="Photo of Wind Turbine Under Blue Sky" height="200px">
-             <h2>Resources</h2>
-             <p>Images: </p>
-             <ol>
-                 <li>Kuprikov, Aleksey. <emphasis>Photo of Wind Turbine Under Blue Sky</emphasis>. 2018. <a href="https://www.pexels.com/photo/photo-of-wind-turbine-under-blue-sky-3551252/">Pexels.com</a>. Accessed 10 July, 2022.</li>
-             <li>Zhugewala. <emphasis>Crop male holding glass bulb in hand</emphasis>. 2019. <a href="https://www.pexels.com/photo/crop-male-holding-glass-bulb-in-hand-2522611/"> Pexels.com</a>. Accessed 10 July, 2022.</li>
-                 <li>PhotoMIX Company. <emphasis>Blue Sky</emphasis>. 2016. <a href="https://www.pexels.com/photo/blue-sky-96622/"> Pexels.com</a>. Accessed 10 July, 2022.</li>
-             </ol>
-         </main>
-         <footer>
-             <p>&copy; 2022 Keith Rowley for BATECH 189</p>
-         </footer>
-     </body>
+            </ul>
+        </nav>
+
+        <main>
+            <h2>Another H2</h2>
+            <img src="Sumatran_Tiger.jpg" width="400px" alt="Tiger staring you down">
+            <p><cite>Sumatran Tiger by <a href="https://commons.wikimedia.org/wiki/File:Indrah_the_Sumatran_Tiger.jpg" target="_blank">Wikimedia</a>.</cite></p>
+            <p>The Sumatran Tiger is from Sumatra. Don't let it eat you. </p>
+        </main>
+
+        <footer>
+            <p>&copy; 2024 by Keith Rowley for BATECH 189</p>
+        </footer>
+    </body>
+
 </html>
